--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             <div class="navitem">
                 <div class="icons">
                     <ul>
-                        <li>
-                            <a href="#"> <i class="fas fa-envelope"></i></a>
+                        <li>                            
                             <a href="#" onclick="mute()"> <i id="red" class="fa fa-bell"></i></a>
                         </li>
                     </ul>
@@ -40,7 +39,7 @@
             </div>
         </div>
         <audio id="audio">
-            <source src="games.mp3" type="audio/mpeg">
+            <source src="audio/games.mp3" type="audio/mpeg">
         </audio>
         <audio id="audio2">
             <source src="audio/2.mp3" type="audio/mpeg">
